# plag-checker

./: .bandit  .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  requirements.txt  users.json
.github/: develop-ci.yml  feature-ci.yml  main-ci.yml
.github/workflows/: delete-feature-branch.yml  develop-ci.yml  feature-ci.yml  main-ci.yml
backend/: Dockerfile  admin_routes.py  app.py  auth.py  auth_routes.py  ca.py  config.py  crypto_storage.py  file_response.py  frontend_routes.py  logging_config.py  request_utils.py  requirements.txt  scan_routes.py  security.py  teacher_routes.py  test.py  uploads.py  users.py
ca/: ca.crt  ca.key  ca.srl
certs/: lecturer.crt  server.crt  student.crt
frontend/: Dockerfile  index.html  test.py
frontend/src/: App.css  App.tsx  index.css  routes.tsx
frontend/src/pages/: AdminPage.tsx  AuthPage.tsx  DatabasePage.tsx  HomePage.tsx  ReportPage.tsx  (+4 more)
lecturer/: lecturer.csr  lecturer.key
plag-system/: __init__.py  checker.py  test.py
plag-system/corpus/: ST6054CEM Assignment_Brief_ (2)-dce6dd42-9ad2-4e2a-b426-08c5e9b5d9fe.doc
plag_checker_app/: __init__.py  __main__.py
plag_system/: __init__.py  checker.py  crypto_storage.py  test.py
plag_system/keys/: signing_key.p12
scripts/: build_package.sh
server/: server.csr  server.key
student/: student.csr  student.key
uploads/: scan_063bcd65ad8acdc1.json  scan_09361db0a82e11dd.json  scan_23d1cb3332d577e0.json  scan_5f9e2cd54488d9ac.json  scan_a7a6c41e01b68af9.json  scan_bead2db336376d00.json  scan_fc45e765febb065d.json
